--- a/.github/workflows/deploy-all.yml
+++ b/.github/workflows/deploy-all.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - apps/base
     types: [closed]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
