--- a/.github/workflows/deploy-app1.yml
+++ b/.github/workflows/deploy-app1.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: deploy all
+name: deploy app1
 
 # Controls when the workflow will run
 on:
@@ -8,7 +8,7 @@ on:
     branches:
       - main
     paths:
-      - apps/base/**
+      - apps/app1/**
     types: [closed]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -25,9 +25,9 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: build all
-        run: echo 'build all in deploy-app'
+      - name: build app1
+        run: echo 'build app1 in deploy-app1'
 
       # Runs a set of commands using the runners shell
-      - name: deploy all
-        run: echo 'deploy all in deploy-app'
+      - name: deploy app1
+        run: echo 'deploy app1 in deploy-app1'
